# casket

./: Cargo.toml  README.md
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yaml
docker/: ci.Dockerfile
docs/: architecture.md  implementation-plan.md
src/: main.rs
src/domain/: entry.rs  mod.rs  secret.rs  tag.rs
src/infra/: mod.rs
src/infra/crypto/: encryptor.rs  key_deriver.rs  mod.rs
src/infra/sqlite/: mod.rs  schema.rs  vault_metadata_repository.rs
src/service/: entry_service.rs  mod.rs  vault_service.rs
src/storage/: traits.rs
